# openGL

./: .gitignore  CMakeLists.txt  README.md  app  build.sh  build_cmake.sh
ChernoTutorial/: CMakeLists.txt  README.md  build.sh
ChernoTutorial/src/: IndexBufferDynamic.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.h  VertexBufferLayout.h  application.cpp
ChernoTutorial/src/pch/: pch.hpp
ChernoTutorial/src/res/shaders/: BatchColor.shader  BatchTexture.shader
ChernoTutorial/src/test/: TestBatchColor.cpp  TestBatchTexture.h  TestDynamicBatch.cpp  TestDynamicBatch.h  TestTexture2D.h
src/: IndexBuffer.cpp  IndexBuffer.h  IndexBufferDynamic.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  application.cpp
src/res/shaders/: Basic.shader
src/test/: CMakeLists.txt  Test.cpp  Test.h  TestBatch.cpp  TestBatch.h  TestBatchColor.h  TestBatchTexture.cpp  TestClearColor.cpp  TestClearColor.h  TestDynamicBatch.cpp  TestDynamicBatch.h  TestTexture2D.cpp
